<resources>
    <string name="app_name">seproject</string>
    <string name="email">Email:</string>
    <string name="example_domain_org">example@domain.org</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="retype_password">Retype password</string>
    <string name="licence_number">Licence number:</string>
    <string name="lnr">LNR*********</string>
    <string name="fullname_string">Fullname:</string>
    <string name="john_john">John John</string>
    <string name="register_text">Register</string>
    <string name="crash">Crash!!!</string>
    <string name="contact_string">Contact</string>
    <string name="log_in">Log in</string>
    <string name="logout">Logout</string>

    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email or password.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="user_text">"This is the user activity!"</string>
    <string name="login_main_button">"LOG IN"</string>
    <string name="signup_main_button">"SIGN UP"</string>
    <string name="name_signup_text">"Name"</string>
    <string name="email_signup_text">Email</string>
    <string name="password_signup">Password</string>
    <string name="phone_signup">Phone</string>
    <string name="car_number_signup">Car number</string>
    <string name="insurance_number_signup">Insurance number</string>
    <string name="car_model_signup">Car model</string>
    <string name="signup_activity_btn">Submit</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="location_string">Location</string>
    <string name="click_to_get_current_location">Click to get current location</string>
    <string name="crash_pictures">Crash pictures</string>
    <string name="upload_pictures">Upload crash pictures</string>
    <string name="do_you_need_medical_assistance">Do you need medical assistance?</string>
    <string name="insurance_should_cover_all_the_cost">Insurance should cover all the cost</string>
    <string name="send_crash_report">Send crash report</string>
    <string name="advice_location_enthernet">Please activate location and enthernet</string>
    <string name="gsp_setting">GSP is setting</string>
    <string name="gps_not_enable">GPS not enable</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_camera_advice">Please take three pictures with the crashed car, from whom at least one contains the inmatriculation number of the car</string>
    <string name="profile_details">Profile details</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="car_model">Car model:</string>
    <string name="car_registration_number">Car registration number</string>
    <string name="car_color">Car color:</string>
    <string name="save_changes_but_text">Save changes</string>

</resources>
