<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.user.crashinsuranceapp.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname_string"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/john_john"
            android:id="@+id/name_edittext"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/example_domain_org"
            android:id="@+id/email_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/password_hint"
            android:id="@+id/password_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retype_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/password_hint"
            android:id="@+id/repassword_edittext"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licence_number"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/lnr"
            android:id="@+id/licence_nr_id"/>
    </LinearLayout>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="registerNewUser2"
        android:text="@string/register_text"
        android:id="@+id/register_button_id"/>

</LinearLayout>
